crates/parser/tests/snapshots/test_primitives__decimal.snap
---
source: crates/parser/tests/test_primitives.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "test",
                        parameters: [],
                        return_type: TypeReference {
                            path: Package {
                                name: "Any",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 24,
                                },
                            },
                            type_arguments: [],
                            type_variable_values: [],
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 22,
                                end_line: 2,
                                end_column: 24,
                            },
                        },
                        return_multiplicity: ZeroOrMany,
                        body: [
                            Literal(
                                Decimal(
                                    DecimalLiteral {
                                        value: "1.0",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 5,
                                            end_line: 4,
                                            end_column: 8,
                                        },
                                    },
                                ),
                            ),
                            Collection(
                                CollectionExpr {
                                    elements: [
                                        Literal(
                                            Decimal(
                                                DecimalLiteral {
                                                    value: "1.0",
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 5,
                                                        start_column: 6,
                                                        end_line: 5,
                                                        end_column: 9,
                                                    },
                                                },
                                            ),
                                        ),
                                        Literal(
                                            Decimal(
                                                DecimalLiteral {
                                                    value: "3.0",
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 5,
                                                        start_column: 12,
                                                        end_line: 5,
                                                        end_column: 15,
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    multiplicity: None,
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 5,
                                        start_column: 5,
                                        end_line: 5,
                                        end_column: 5,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
